update index.html and intro styles: fix image path and add spacing adjustment

--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -4,7 +4,7 @@ section#intro {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-position: center;
-    background-image: url("../img/collinsbw.jpg");
+    background-image: url("../assets/img/collinsbw.jpg");
     height: 100vh;
     min-height: 100vh;
 }
